tests/specs/class_property.txt
# mod.ts
export class Class {
  someproperty: bool;
  optproperty: bigint;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   someproperty: bool;
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:3
  | 
3 |   optproperty: bigint;
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

class Class

  someproperty: bool
  optproperty: bigint


# output.json
{
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "properties": [
              {
                "tsType": {
                  "repr": "bool",
                  "kind": "typeRef",
                  "value": {
                    "typeName": "bool"
                  }
                },
                "name": "someproperty",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 1,
                  "col": 2,
                  "byteIndex": 23
                }
              },
              {
                "tsType": {
                  "repr": "bigint",
                  "kind": "keyword",
                  "value": "bigint"
                },
                "name": "optproperty",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 2,
                  "col": 2,
                  "byteIndex": 45
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
